# service-template

./: .env.example  .gitmodules  Cargo.toml  docker-compose.development.yml  flake.nix  rust-toolchain.toml
.github/workflows/: lint.yml
lib/: Cargo.toml  build.rs
lib/src/services/: greeter.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/services/: greeter.rs  logging.rs
