[package]
name = "service-template"
version = "0.1.0"
authors = ["AltF2 <contact@altf2.dev>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.57"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
service-lib = { path = "./lib" }

[build-dependencies]
tonic-build = "0.7.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
