[package]
name = "service-template" # TODO: Change name
version = "0.1.0"
authors = ["AltF2 <contact@altf2.dev>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
template-lib = { path = "./lib" } # TODO: Change name
utils = { path = "./utils" }
tonic = "0.7.2"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
