[package]
name = "service-template" # TODO: Change name
version = "0.1.0"
authors = ["AltF2 <contact@altf2.dev>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

[profile.release]
lto = "thin"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tonic = "0.11.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
prost = "0.12"

migration = { path = "./migration" }
entity = { path = "./entity" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[build-dependencies]
tonic-build = { version = "0.11",  features = ["prost"] }
