[package]
name = "template-lib" # TODO: Change name
version = "0.1.0"
authors = ["AltF2 <contact@altf2.dev>"]
edition = "2021"
readme = "../README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.34"
anyhow = "1.0.57"
tonic = "0.7.2"
prost = "0.10"
migration = { path = "../migration" }
entity = { path = "../entity" }

[build-dependencies]
tonic-build = { version = "0.7",  features = ["prost"] }
